# FastAPIProject

./: .env  docker-compose.yml  example.env  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: films.py
src/core/: config.py
src/db/: elastic.py
src/models/: film.py
src/services/: film.py
