[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "clasterpack",email = "clasterpack@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "elasticsearch[async] (>=8.17.2,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
